More work on the various scenarios, this will allow to understand the neural networks way better and make progress on the speed of the IACars